--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -182,7 +182,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat202 .desc-good, #cat216 .desc-good, #cat13 .desc-good, #cat19 .desc-good,
 #cat34 .desc-good, #cat35 .desc-good, #cat77 .desc-good, #cat28 .desc-good,
 #cat174 .desc-good, #cat220 .desc-good, #cat27 .desc-good,
-#cat234 .desc-good,
+#cat234 .desc-good, #cat138 .desc-good,
 #cat191 .desc-good {min-width:36em;}
 #cat229 .desc-good, #cat20 .desc-good,
 #cat139 .desc-good,
