--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -33,6 +33,7 @@ span.artn {display: none;}
 .moregoods dd {font-weight: bold;}
 abbr {cursor: help;}
 
+.tab>tbody>tr>td {white-space: nowrap;}
 .tab tr+tr td+td  {text-align:center;}
 .tab.nocenter tr+tr td+td {text-align:left;}
 .tab.nocenter tr+tr td+td.tb {text-align:center;}
@@ -46,8 +47,8 @@ abbr {cursor: help;}
   {color:#d8ecff; /*visibility: hidden; display: none;*/}
 .tab tr.blkt td {border-top:double; padding-top:3px; }
 .tab tr.blkt2 td {border-top:2px solid #686c6e; padding-top:3px;}
-.hidden {display: none;}
 .tab tr.norow {display: none;}
+.hidden {display: none;}
 
 .tab tr.red {background-color: #f8e8d8;}
 
@@ -174,18 +175,19 @@ div.ref.pdf a {font-weight: bold; }
 .article ul {margin: -2px 0 10px 0;}
 .info .right {float: right; font-style: italic; font-size: 125%; padding: 10px 5em 0 0;}
 
-.desc-good {min-width: 24em;max-width:60em;}
+.desc-good {min-width: 26em;max-width:60em;}
+#cat266 .desc-good,
 #cat32 .desc-good {min-width:28em;}
 #cat217 .desc-good, #cat29 .desc-good, #cat233 .desc-good,
-#cat12 .desc-good, #cat45 .desc-good,
+#cat12 .desc-good, #cat45 .desc-good, #cat260 .desc-good, #cat223 .desc-good,
 #cat118 .desc-good {min-width:30em;}
 #cat14 .desc-good {min-width:32em;}
 #cat245 .desc-good {min-width:34em;}
 #cat190 .desc-good, #cat198 .desc-good, #cat200 .desc-good, #cat201 .desc-good,
-#cat202 .desc-good, #cat216 .desc-good, #cat13 .desc-good, #cat19 .desc-good,
+#cat202 .desc-good, #cat13 .desc-good, #cat19 .desc-good,
 #cat34 .desc-good, #cat35 .desc-good, #cat77 .desc-good, #cat28 .desc-good,
 #cat220 .desc-good, #cat27 .desc-good,
-#cat234 .desc-good, #cat138 .desc-good,
+#cat234 .desc-good, #cat138 .desc-good, #cat212 .desc-good,
 #cat191 .desc-good {min-width:36em;}
 #cat229 .desc-good, #cat20 .desc-good,
 #cat139 .desc-good,
@@ -197,12 +199,31 @@ div.ref.pdf a {font-weight: bold; }
 #cat120 .desc-good {min-width:40em;}
 #cat175 .desc-good, #cat191 .desc-good,
 #cat47 .desc-good, #cat48 .desc-good,
-#cat247 .desc-good,
+#cat247 .desc-good, #cat216 .desc-good,
 #cat235 .desc-good {min-width:44em;}
 #cat174 .desc-good,
 #cat176 .desc-good {min-width:48em;}
-
+/*
+*/
 #cat234 .desc-good {max-width:45em;}
 #cat120 .desc-good,
 #cat235 .desc-good {max-width:55em;}
 #cat176 .desc-good {max-width:65em;}
+/*
+.spo1 > a[href="/catalog/cat0.shtml"],
+.spo1 > a[href="/catalog/cat0.shtml"]:hover {
+  background-color: #485257;
+  color: #485257;
+  opacity: 0.99;
+  padding-bottom: 20px;
+  cursor: default;
+}
+.spo2 > a[href="/catalog/cat0.shtml"],
+.spo2 > a[href="/catalog/cat0.shtml"]:hover {
+  background-color: #27333A;
+  color: #27333A;
+  opacity: 0.99;
+  padding-bottom: 20px;
+  cursor: default;
+}
+*/
