--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -51,6 +51,8 @@ abbr {cursor: help;}
 .hidden {display: none;}
 
 .tab tr.red {background-color: #f8e8d8;}
+.tab tr.sp1 {background-color: #f6fcf6;}
+.tab tr.sp2 {background-color: #f0f4f0;}
 
 .one-good.next {display: none;}
 .info-cat .tab.mult2 {width:48% !important; float:left; margin-bottom:15px;}
@@ -186,7 +188,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat190 .desc-good, #cat198 .desc-good, #cat200 .desc-good, #cat201 .desc-good,
 #cat202 .desc-good, #cat13 .desc-good, #cat19 .desc-good,
 #cat34 .desc-good, #cat35 .desc-good, #cat77 .desc-good, #cat28 .desc-good,
-#cat220 .desc-good, #cat27 .desc-good,
+#cat220 .desc-good, #cat27 .desc-good, #cat197 .desc-good,
 #cat234 .desc-good, #cat138 .desc-good, #cat212 .desc-good,
 #cat191 .desc-good {min-width:36em;}
 #cat229 .desc-good, #cat20 .desc-good,
@@ -197,7 +199,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat15 .desc-good, #cat107 .desc-good, #cat227 .desc-good, #cat30 .desc-good,
 #cat117 .desc-good, #cat254 .desc-good,
 #cat120 .desc-good {min-width:40em;}
-#cat175 .desc-good, #cat191 .desc-good,
+#cat175 .desc-good, #cat270 .desc-good, #cat191 .desc-good,
 #cat47 .desc-good, #cat48 .desc-good,
 #cat247 .desc-good, #cat216 .desc-good,
 #cat235 .desc-good {min-width:44em;}
