--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -206,7 +206,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat117 .desc-good, #cat254 .desc-good,
 #cat120 .desc-good {min-width:40em;}
 #cat175 .desc-good, #cat270 .desc-good, #cat191 .desc-good,
-#cat47 .desc-good, #cat48 .desc-good,
+#cat47 .desc-good, #cat48 .desc-good, #cat291 .desc-good,
 #cat247 .desc-good, #cat216 .desc-good,
 #cat235 .desc-good {min-width:44em;}
 #cat174 .desc-good,
