--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -147,6 +147,11 @@ margin:0;}
 }
 #nooferta {text-align: center; font-size: 75%; color: #555; line-height: 100%; padding:4px 23px 1px 23px;}
 
+#w2014ny {background-color: #fff;}
+#w2014ny div {float: left;}
+#w2014ny2 {text-align: right; margin-right: .4em;}
+#w2014ny3 {text-align: left}
+
 #w2014   {background-color: #58f;}
 #w2014 a {text-decoration: none;}
 #w2014 span:hover {border-bottom: solid 2px #ffffff;}
@@ -186,7 +191,7 @@ div.ref.pdf a {font-weight: bold; }
 .desc-good {min-width: 26em;max-width:60em;}
 #cat266 .desc-good,
 #cat32 .desc-good {min-width:28em;}
-#cat217 .desc-good, #cat29 .desc-good, #cat233 .desc-good,
+#cat217 .desc-good, #cat29 .desc-good, #cat230 .desc-good, #cat233 .desc-good,
 #cat12 .desc-good, #cat45 .desc-good, #cat260 .desc-good, #cat223 .desc-good,
 #cat118 .desc-good {min-width:30em;}
 #cat14 .desc-good {min-width:32em;}
@@ -206,7 +211,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat117 .desc-good, #cat254 .desc-good,
 #cat120 .desc-good {min-width:40em;}
 #cat175 .desc-good, #cat270 .desc-good, #cat191 .desc-good,
-#cat47 .desc-good, #cat48 .desc-good, #cat291 .desc-good,
+#cat48 .desc-good, #cat291 .desc-good,  #cat47 .desc-good, #cat293 .desc-good,
 #cat247 .desc-good, #cat216 .desc-good,
 #cat235 .desc-good {min-width:44em;}
 #cat174 .desc-good,
