--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -1,3 +1,4 @@
+/* !!! */.tmenu-tab {margin-bottom: -25px;} /* 30.04.14 */
 abbr, acronym, .one-good .dop a, li span[title] {border-bottom: 1px dotted; }
 abbr, acronym {margin-bottom: -3px; font-style: italic; color: #007700}
 b abbr, b acronym, .dop abbr, .dop acronym, .title abbr, .title acronym {font-style: inherit; color: #005000}
@@ -134,8 +135,18 @@ margin:0;}
 #specoffers_page #all-summa.good-cart {text-decoration: none; }
 #specoffers_page #all-summa.good-cart p.ed {text-decoration: line-through; }
 #specoffers_page #all-summa.good-cart p.price {padding-left: 0; padding-right: 0;}
-#specoffers_page #all-summa.good-cart p.price span {font-size: 22px /*150%*/;}
+#specoffers_page #all-summa.good-cart p.price span {font-size: 18px /*150%*/;}
 #specoffers_page .spof :last-child .red {font-size: 150%;}
+
+table.one-good.sale1, table.tab.sale1 {background-color: #fff8f8;}
+table.one-good.sale1 td.good-txt .title:before
+  { display: inline; content: "Распродажа: "; font-size: 120%; font-weight: bold; font-style: italic; color: #C90000; }
+table.one-good.sale1 td#all-summa.good-cart p.ed {display: none;}
+table.one-good.sale1 td#all-summa.good-cart { width: 0; }
+table.one-good.sale1 td#all-summa.good-cart { width: auto !ie; }
+table.one-good.sale1 td#all-summa.good-cart p.price span {font-size: 18px /*150%*/;}
+table.one-good.sale1 td#all-summa.good-cart p.price {white-space: normal; padding-left: 0; padding-right: 0; width: 112px; }
+table.one-good.sale1 td#all-summa.good-cart p.price:after { content: " Цена распродажи "; font-size: 11px; display: block; text-align: center; color: #C90000; }
 
 .l1 {clear: both; color: #555; text-align: center; font-size: 24px; font-weight: bold; font-family: Times New Roman, serif; font-style: italic; margin: 6px 0px -12px 0;}
 .l1a {font-weight: normal;}
@@ -148,6 +159,10 @@ margin:0;}
   margin-left: -18px;
 }
 #nooferta {text-align: center; font-size: 75%; color: #555; line-height: 100%; padding:4px 23px 1px 23px;}
+
+.toptmp1 { position: absolute; top: 270px; left: 360px; }
+/* Hide/adjust this when <div class="toptmp1"> in catalog/index.shtml is not used or changed! */
+div.info-cat h1 { margin-top: 45px; }
 
 #w2014ny {background-color: #fff;}
 #w2014ny div {float: left;}
@@ -215,7 +230,7 @@ div.ref.pdf a {font-weight: bold; }
 #cat120 .desc-good {min-width:40em;}
 #cat175 .desc-good, #cat270 .desc-good, #cat191 .desc-good,
 #cat247 .desc-good, #cat216 .desc-good, #cat302 .desc-good,
-#cat78 .desc-good,
+#cat78 .desc-good, #cat279 .desc-good,
 #cat235 .desc-good {min-width:44em;}
 #cat174 .desc-good,
 #cat176 .desc-good {min-width:48em;}
@@ -227,6 +242,9 @@ div.ref.pdf a {font-weight: bold; }
 #cat120 .desc-good,
 #cat235 .desc-good {max-width:55em;}
 #cat176 .desc-good {max-width:65em;}
+
+/*#cat333 .tab td {background-color: #fff8f8;}*/
+
 /*
 .spo1 > a[href="/catalog/cat0.shtml"],
 .spo1 > a[href="/catalog/cat0.shtml"]:hover {
