--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -55,9 +55,10 @@ abbr {cursor: help;}
 .tab tr.norow {display: none;}
 .hidden {display: none;}
 
-.tab tr.red {background-color: #f8e8d8;}
-.tab tr.sp1 {background-color: #f6fcf6;}
-.tab tr.sp2 {background-color: #f4f6ff;}
+.tab tr.red  {background-color: #f8e8d8;}
+.tab tr.blue {background-color: #f0f4ff;}
+.tab tr.sp1  {background-color: #f6fcf6;}
+.tab tr.sp2  {background-color: #f8f2ff;}
 
 .one-good.next {display: none;}
 .info-cat .tab.mult2 {width:48% !important; float:left; margin-bottom:15px;}
